# castwright

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_assets.py
src/castwright/: __init__.py  _types.py  cli.py  filters.py  generate.py  multiturn.py  prompts.py  providers.py  scoring.py  seed_dedup.py
templates/: README.md  classification.json  code_generation.json  qa_pairs.json  summarization.json
tests/: test_cli.py  test_filters.py  test_generate.py  test_init.py  test_multiturn.py  test_ollama.py  test_prompts.py  test_providers.py  test_scoring.py  test_seed_dedup.py  test_types.py
